k8s/grafana/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grafana-route
  namespace: art2010901-dev
spec:
  to:
    kind: Service
    name: grafana
  port:
    targetPort: http
  tls:
    termination: edge
  wildcardPolicy: None
